--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -7,7 +7,7 @@
   font-size: 100px;
   font-family: Cookie, sans-serif;
   text-shadow: 2px 2px white;
-  background-image: url("../../imgcap.jpg");
+  background-image: url("../../assets/img/imgcap.jpg");
   background-repeat:no-repeat;
   background-color: #030406;
   height: 500px; 
