--- a/src/components/Bar/index.css
+++ b/src/components/Bar/index.css
@@ -1,7 +1,7 @@
 .ant-carousel .slick-slide {
   text-align: center;
   height: 160px;
-  line-height: 160px;
+  line-height: 16px;
   background: #030406;
   overflow: hidden;
 }
@@ -9,8 +9,18 @@
 .ant-carousel .slick-slide h3 {
   color: #fff;
 }
-.ant-carousel .dev-item img {
-  width: 54px;
-  height: 54px;
+img {
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+  
+}
+a{
+  text-align: center;
+  color: #fff;
+  padding-top: 10px;
 }
